[gd_scene load_steps=11 format=2]

[ext_resource path="res://HeartTree.tscn" type="PackedScene" id=1]
[ext_resource path="res://Cabin.tscn" type="PackedScene" id=2]
[ext_resource path="res://forest/PlantedTree.tscn" type="PackedScene" id=3]
[ext_resource path="res://Lumberjack.tscn" type="PackedScene" id=4]
[ext_resource path="res://Play.gd" type="Script" id=5]
[ext_resource path="res://assets/Background.png" type="Texture" id=6]
[ext_resource path="res://assets/audio/music/Main Theme 0.2.ogg" type="AudioStream" id=7]
[ext_resource path="res://forest/ForestCursor.tscn" type="PackedScene" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 967, 10 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 11, 539 )

[node name="Play" type="Node"]
script = ExtResource( 5 )
lumberjack = NodePath("World/YSort/Lumberjack")
lumberjack_spawn = NodePath("World/YSort/LumberjackSpawnPoint")

[node name="PlayTheme" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
bus = "Music"

[node name="World" type="Node2D" parent="."]

[node name="Background" type="Sprite" parent="World"]
position = Vector2( 960, 540 )
z_index = -2000
texture = ExtResource( 6 )

[node name="ForestCursor" parent="World" instance=ExtResource( 8 )]
position = Vector2( 372, 454 )
z_index = 100
tree_parent_node = NodePath("../YSort/Trees")

[node name="YSort" type="YSort" parent="World"]

[node name="Cabin" parent="World/YSort" instance=ExtResource( 2 )]
position = Vector2( 1815, 932 )

[node name="HeartTree" parent="World/YSort" instance=ExtResource( 1 )]
position = Vector2( 113, 191 )

[node name="Trees" type="YSort" parent="World/YSort"]

[node name="PlantedTree" parent="World/YSort/Trees" instance=ExtResource( 3 )]
position = Vector2( 373, 195 )
start_grown = true

[node name="PlantedTree5" parent="World/YSort/Trees" instance=ExtResource( 3 )]
position = Vector2( 1049, 195 )

[node name="PlantedTree6" parent="World/YSort/Trees" instance=ExtResource( 3 )]
position = Vector2( 932, 639 )

[node name="PlantedTree7" parent="World/YSort/Trees" instance=ExtResource( 3 )]
position = Vector2( 567, 986 )

[node name="PlantedTree2" parent="World/YSort/Trees" instance=ExtResource( 3 )]
position = Vector2( 349, 342 )
start_grown = true

[node name="PlantedTree3" parent="World/YSort/Trees" instance=ExtResource( 3 )]
position = Vector2( 73, 464 )
start_grown = true

[node name="PlantedTree4" parent="World/YSort/Trees" instance=ExtResource( 3 )]
position = Vector2( 230, 460 )
start_grown = true

[node name="LumberjackSpawnPoint" type="Position2D" parent="World/YSort"]
position = Vector2( 1815, 966 )

[node name="Lumberjack" parent="World/YSort" instance=ExtResource( 4 )]
position = Vector2( 1248, 294 )

[node name="StaticBody2D" type="StaticBody2D" parent="." groups=["tree"]]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 959, 32 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 957, 1089 )
shape = SubResource( 1 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( -8, 547 )
shape = SubResource( 2 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 1930, 550 )
shape = SubResource( 2 )

[connection signal="heart_tree_died" from="World/YSort/HeartTree" to="." method="_on_HeartTree_heart_tree_died"]
